--- a/holo-ui/src/index.css
+++ b/holo-ui/src/index.css
@@ -1,14 +1,39 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family:"Roboto";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  border-color: white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  monospace;
+}
+
+.rowFont {
+  background-color: rgba(215, 228, 234, 1);
+  padding-right: 40px;
+  border-collapse: collapse;
+  border: 1px solid white;
+
+}
+
+.tableFont {
+  fontFamily: "Roboto";
+  border-collapse: collapse;
+  background-color: rgba(215, 228, 234, 1);
+  font-weight: 400;
+  font-style: normal;
+  font-size: 15px;
+  text-align: left;
+  border: 1px solid white;
+}
+
+.lastColumnFont {
+  background-color: rgba(215, 228, 234, 1);
+  padding-right: 690px;
+
+  border-collapse: collapse;
 }
